# OpenGL

./: .gitignore
2d/: CMakeLists.txt
2d/shaders/: default.frag
2d/src/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Square.cpp  Square.h  Window.cpp  Window.h  main.cpp
Hello World/Project1/: Project1.slnx  Project1.vcxproj  glad.c  main.cpp
Hello World/Project1/Libraries/lib/: glfw3.lib
Hello World/Project1/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  vc145.idb
Hello World/Project1/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
